@@ -1,7 +1,8 @@
 /*
 //
 //  Copyright 1997-2009 Torsten Rohlfing
-//  Copyright 2004-2009 SRI International
+//
+//  Copyright 2004-2010 SRI International
 //
 //  This file is part of the Computational Morphometry Toolkit.
 //
@@ -69,6 +70,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 
 #include "normaldistr.h"
+
+namespace
+alglib
+{
 
 /*************************************************************************
 Error function
@@ -403,5 +408,4 @@ ap::real_value_type invnormaldistribution(ap::real_value_type y0)
     return result;
 }
 
-
-
+} // namespace alglib
