@@ -1,7 +1,8 @@
 /*
 //
 //  Copyright 1997-2009 Torsten Rohlfing
-//  Copyright 2004-2009 SRI International
+//
+//  Copyright 2004-2010 SRI International
 //
 //  This file is part of the Computational Morphometry Toolkit.
 //
@@ -76,6 +77,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "normaldistr.h"
 #include "ibetaf.h"
 
+namespace
+alglib
+{
 
 /*************************************************************************
 Student's t distribution
@@ -140,5 +144,6 @@ Copyright 1984, 1987, 1995, 2000 by Stephen L. Moshier
 *************************************************************************/
 ap::real_value_type invstudenttdistribution(int k, ap::real_value_type p);
 
+} // namespace alglib
 
 #endif
